<resources>
    <string name="app_name">Impian</string>
    <string name="on_progress">Berlangsung</string>
    <string name="all">Semua</string>
    <string name="achieved">Tercapai</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_goals">Tambah Impian</string>
    <string name="add_balance">Tambah Tabungan</string>
    <string name="yes_save">Ya, Simpan</string>
    <string name="save">Simpan</string>
    <string name="cancel">Batalkan</string>
    <string name="no_cancel">Tidak, Batalkan</string>
    <string name="ok">Oke</string>
    <string name="download_report">Unduh Laporan</string>
    <string name="add_saving">Tambah Tabungan</string>
    <string name="your_balance">Tabungan Kamu</string>
    <string name="your_target">Target Kamu</string>
    <string name="about">Tentang</string>
    <string name="mark_as_achieved">Tandai\nTelah Tercapai</string>
    <string name="about_goals">Tentang\nImpian Kamu</string>
    <string name="target_unreached">Kamu Belum Mencapai Target :(</string>
    <string name="info_unreached_goals">Kamu Bisa Menyelesaikan Impianmu Jika Sudah Diatas 90%  :D !</string>
    <string name="your_goals">Impian Kamu</string>
    <string name="ask_mark_as_achieved">Tandai Sebagai Tercapai?</string>
    <string name="description_ask_mark_as_achieved">Kamu Tetap Bisa Melihat Impian Kamu Di Tab \'Tercapai\' Tetapi Kamu Tidak Dapat Menambahkan Tabungan Lagi. Lanjutkan?</string>
    <string name="description_add_balance">Kejar Impian Mu Dengan Menabung</string>
    <string name="ask_add_balance">Kamu Mau Nabung Berapa?*</string>
    <string name="need_amount">Target Kamu</string>
    <string name="describe_your_goals">Deksripsikan Impian Kamu</string>
    <string name="about_your_goals">Tentang Impian Kamu</string>
    <string name="everything_start_with_dream">Semuanya Berawal Dari Mimpi :D !</string>
    <string name="please_fill_data">Data Kamu Belum Lengkap :( !</string>
    <string name="description_please_fill_data">Pastikan Data Yang Kamu Masukkan Sudah Lengkap Ya :D !</string>
    <string name="input_your_name">Masukkan Nama Kamu</string>
    <string name="my_balance">Tabunganku</string>
    <string name="goals_achieved">Impian Tercapai</string>
    <string name="back">Kembali</string>
    <string name="dont_forget_to_share">Jangan Lupa\nBagikan Pengalaman Mu Ya!</string>
    <string name="add_goals">Tambah Impian</string>
    <string name="goals_not_found">Kamu Belum Mempunyai Impian :(</string>
    <string name="your_not_have_completed_goals">Kamu Belum Memiliki Impian Tercapai :(</string>
    <string name="balance_empty">Kamu Belum Memiliki Tabungan :(</string>
    <string name="saving_amount">Jumlah Menabung</string>
    <string name="about_this_saving">Tentang Tabungan Ini</string>
    <string name="saving_date">Tanggal Menabung</string>
    <string name="delete_this_saving">Hapus Tabungan Ini</string>
    <string name="delete_your_goals">Hapus Impian Kamu?</string>
    <string name="subtitle_delete_your_goals">Impian Kamu Akan Dihapus Beserta Histori Tabungan Kamu, Lanjutkan?</string>
    <string name="yes_continue">Ya, Lanjutkan</string>
    <string name="update_your_goals">Perbarui Impian Kamu?</string>
    <string name="subtile_update_your_goals">Ini Tidak Akan Menghapus Histori Tabungan Kamu, Lanjutkan?</string>
    <string name="ask_delete_saving_history">Hapus Histori Menabung?</string>
    <string name="subtitle_delete_saving_history">Aksi ini Hanya akan Menghapus Data Terpilih, Tidak Menghapus Semuanya. Lanjutkan?</string>
    <string name="welcome_greetings">Hai, Selamat Datang!</string>
    <string name="signin_with_google">Masuk Menggunakan Google</string>
    <string name="signin">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="otp_sended">Kode OTP Sedang Dikirimkan\nKe Nomor</string>
    <string name="resend">Kirim Ulang</string>
    <string name="ups">Ups…</string>
    <string name="phone_number_empty">Kamu Belum Memasukkan Nomor HP Kamu :(</string>
    <string name="account_not_found">Akun Tidak Ditemukan</string>
    <string name="account_not_fount_description">Sepertinya Kamu Belum Terdaftar Pada Aplikasi Impian, Apakah Kamu Ingin Mendaftar?</string>
    <string name="yes_register">Ya, Daftar</string>
    <string name="name_empty">Nama Kamu Masih Kosong</string>
    <string name="phone_number">Nomor Telepon Kamu</string>
    <string name="sign_in_anonymously">Lanjutkan Tanpa Login</string>
    <string name="loading">Tunggu Sebentar Ya…</string>
    <string name="motto_not_found">Tidak Ada Motto</string>
    <string name="logout">Keluar</string>
    <string name="subtitle_logout">Apakah Kamu Yakin Ingin Keluar?</string>
    <string name="something_wrong">Ada Sesuatu Yang Salah, Hanya Itu Yang Kami Tau.</string>
    <string name="saving">Tabungan</string>
    <string name="offline_mode">Mode Gratis</string>
    <string name="description_offline_mode">Dalam Mode Ini Kamu Tidak Menggunakan Jaringan Data Apapun. Namun Data Tidak Di Sinkronisasikan Ke Cloud Dan Berpotensi Kehilangan Data.</string>
    <string name="description_create_goals">Kamu Dapat Membuat Impian Tanpa Batasan Apapun. Karena Kamu Berhak Untuk #MulaiRaihImpian</string>
    <string name="daily_reminder">Pengingat Harian</string>
    <string name="description_daily_reminder">Kamu Akan Di Ingatkan Setiap Hari Untuk Menabung Agar Kamu Tidak Lupa Untuk Menabung.</string>
    <string name="free">100% Gratis</string>
    <string name="description_free">Kamu Dapat Menggunakan Aplikasi Ini Secara Gratis. Bahkan Kamu Dapat Menggunakan Mode Gratis Agar Tidak Menggunakan Biaya Jaringan.</string>
    <string name="slug">#MulaiRaihImpian</string>
    <string name="share">Bagikan</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="migrate_to_online_account">Migrasi ke Akun Online</string>
    <string name="migrate">Migrasi Akun</string>
    <string name="description_migrate">Anda akan daftar dan menggunakan akun impian untuk masuk. Data anda sebelumnya akan di cadangkan ke akun Impian anda.</string>
    <string name="what_your_goals">Apa yang kamu impikan?</string>
    <string name="hint_step_one">Langkah pertama untuk\nMulai Raih Impian</string>
    <string name="answer_here">Jawab disini</string>
    <string name="menu">Menu</string>
    <string name="choose_one">Pilih Salah Satu</string>
    <string name="wedding">Pernikahan</string>
    <string name="vacation">Wisata</string>
    <string name="electronic">Elektronik</string>
    <string name="home">Tempat Tinggal</string>
    <string name="vehicle">Kendaraan</string>
    <string name="health">Kesehatan</string>
    <string name="education">Pendidikan</string>
    <string name="etc">Lainnya</string>
    <string name="choose_category">Kategori Impian Kamu</string>
    <string name="rupiah_short">Rp</string>
    <string name="budget_your_need">Berapa dana yang kamu perlukan?</string>
    <string name="when_your_goals_will_be_achieved">Kapan kamu ingin impian kamu tercapai?</string>
    <string name="subtitle_data_is_not_filled">Data yang anda masukkan belum lengkap, tolong di periksa kembali ya!</string>
    <string name="can_t_create_goals">Tidak dapat membuat impian</string>
    <string name="describe_about_your_goals_not_required">Jelaskan tentang apa yang kamu impikan (Tidak Wajib)</string>
    <string name="fail_to_save_data">Gagal Menyimpan Data!</string>
    <string name="your_portfolio">Portofolio Kamu</string>
    <string name="active_device">Perangkat Yang Aktif</string>
    <string name="backup_data">Cadangkan Data</string>
    <string name="onload_data">Sedang Memuat Data...</string>
    <string name="sync">Sinkronisasikan</string>
    <string name="account">Akun</string>
    <string name="notification">Notifikasi</string>
    <string name="setting">Pengaturan</string>
    <string name="saving_calculator">Kalkulator Menabung</string>
</resources>