<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.CreateGoalsActivity">

    <RelativeLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/bottom_radius"
        android:backgroundTint="@color/yellow_600">

        <TextView
            android:id="@+id/textBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:drawableStart="@drawable/ic_back"
            android:drawablePadding="8dp"
            android:drawableTint="@color/material_black"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/back"
            android:textColor="@color/material_black"
            android:textSize="16sp" />


    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_above="@id/exfabSave"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/what_your_goals"
                app:boxStrokeColor="@color/material_black"
                app:hintTextColor="@color/material_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputGoalsName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/describe_about_your_goals_not_required"
                android:layout_marginTop="16dp"
                app:boxStrokeColor="@color/material_black"
                app:hintTextColor="@color/material_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputDescription"
                    android:layout_width="match_parent"
                    android:lines="4"
                    android:gravity="top"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/choose_category"
                app:boxStrokeColor="@color/material_black"
                app:hintTextColor="@color/material_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/material_black"
                    android:editable="false"
                    android:focusable="false"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/budget_your_need"
                app:boxStrokeColor="@color/material_black"
                app:hintTextColor="@color/material_black"
                app:prefixText="@string/rupiah_short"
                app:prefixTextColor="@color/material_black">

                <com.steadytech.impian.custom.RupiahEditText
                    android:id="@+id/inputBudget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when_your_goals_will_be_achieved"
                android:id="@+id/textHintCalendar"
                android:textSize="16sp"
                android:textColor="@color/material_black"/>

            <CalendarView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/calendar"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/exfabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/save"
        app:backgroundTint="@color/yellow_600"
        app:fabSize="normal"
        app:icon="@drawable/ic_save_24" />
</RelativeLayout>