<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".bottomsheet.InfoBottomSheetFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/saving_amount"
        app:boxStrokeColor="@color/yellow_800"
        app:hintTextColor="@color/yellow_800"
        app:prefixText="Rp "
        app:prefixTextColor="@color/black">

        <com.steadytech.impian.custom.RupiahEditText
            android:id="@+id/inputAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/saving_date"
        app:boxStrokeColor="@color/yellow_800"
        app:hintTextColor="@color/yellow_800"
        app:prefixTextColor="@color/black">

        <EditText
            android:id="@+id/inputDate"
            android:layout_width="match_parent"
            android:enabled="false"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/about_this_saving"
        app:boxStrokeColor="@color/yellow_800"
        app:hintTextColor="@color/yellow_800">

        <EditText
            android:enabled="false"
            android:id="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:lines="5" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/red_300"
        app:rippleColor="@color/bsp_red_focused"
        app:icon="@drawable/ic_delete"
        app:iconTint="@color/white"
        app:iconGravity="start"
        android:textColor="@color/white"
        android:text="@string/delete_this_saving"
        android:layout_margin="16dp"/>

</LinearLayout>