<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textTitleCurrentSavingAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/textCurrentAmount"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:text="Kamu Telah Menabung Sebanyak" />

        <TextView
            android:id="@+id/textCurrentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="16dp"
            android:text="Rp720.000"
            android:textColor="@color/material_black"
            android:textSize="24sp" />

        <ImageView
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/imagePortfolio"
            android:layout_centerInParent="true"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_chart"
            android:layout_alignParentEnd="true"
            android:layout_margin="32dp"
            app:tint="@color/material_black" />

        <TextView
            android:id="@+id/textYourGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:text="@string/your_goals"
            android:textColor="@color/material_black"
            android:textSize="16sp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            app:tabGravity="center"
            app:tabMode="fixed"
            app:tabRippleColor="@color/yellow_800"
            app:tabIndicatorHeight="2dp"
            android:layout_marginHorizontal="16dp"
            app:tabMinWidth="64dp"
            app:tabIndicatorColor="@color/yellow_600"
            app:tabIndicatorFullWidth="true"
            app:tabSelectedTextColor="@color/material_black"
            app:tabTextAppearance="@style/CustomTabStyle">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/achieved" />

        </com.google.android.material.tabs.TabLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearNotHaveGoals"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" >

        <ImageView
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:src="@drawable/ic_lets_add_goals"/>

        <TextView
            android:id="@+id/textNotHaveGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goals_not_found"
            android:layout_margin="16dp"
            android:textSize="16sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAddGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/yellow_600"
            android:textColor="@color/black"
            android:text="@string/add_goals"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTodo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:visibility="gone"
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_24"
        app:backgroundTint="@color/yellow_600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>