<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <LinearLayout
        android:padding="16dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/linearBack"
            android:gravity="center|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                app:tint="@color/material_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"/>

            <TextView
                android:layout_marginHorizontal="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textBack"
                android:text="@string/back"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_marginVertical="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/textModeOffline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/offline_mode"/>

        <ImageView
            app:tint="@color/text_primary"
            android:id="@+id/imageInfo"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_outline_info"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/textModeOffline"
            android:layout_marginStart="8dp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchFreeMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeMigrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/textMigrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:drawablePadding="8dp"
            android:textColor="@color/yellow_800"
            android:gravity="center"
            android:text="@string/migrate_to_online_account"/>

        <ImageView
            app:tint="@color/yellow_800"
            android:id="@+id/imageInfoMigrate"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_outline_info"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/textMigrate"
            android:layout_marginStart="8dp"/>

    </RelativeLayout>

</LinearLayout>